[tool.poetry]
name = "try_smoothgrad"
version = "1.0.0"
description = "Try smoothgrad on TensorFlow 2 by using UTKFace"
authors = ["Haruhiko Takada <haruhiko.takada@gmail.com>"]
license = "Apache-2.0"

[tool.poetry.dependencies]
python = "^3.8"
opencv-python = "^4.4.0"
h5py = "^2.10.0"
tensorflow = "^2.3.0"
ipykernel = "^5.3.4"
matplotlib = "^3.3.2"
tqdm = "^4.49.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
